--- a/app/features/navbar/navbar.html
+++ b/app/features/navbar/navbar.html
@@ -1,13 +1,6 @@
 <div class="navbar navbar-inverse " ng-controller="navbarCtrl">
-    <div class="">
+    <div>
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
             <div class="navbar-brand">{{ state.title }}</div>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -22,8 +15,8 @@
                 <li>
                     <div class="navbar-text">Users Online</div>
                 </li>
-                <li tooltip-placement="bottom" tooltip="The number us in on the site...">
-                    <a>
+                <li tooltip-placement="bottom">
+                    <a title="The number us in on the site...">
                         <span data-shake-counter data-count="state.userCount"></span>
                         <span class="visible-xs">Users Online</span>
                     </a>
