--- a/app/features/home/home.html
+++ b/app/features/home/home.html
@@ -46,7 +46,8 @@
                                   placeholder="Type your message here..."></textarea>
                     </div>
                     <div class="btn-group">
-                        <button class="btn btn-primary" ng-click="addMessage()">Send</button>
+                        <button type="submit" class="btn btn-primary"
+                                ng-click="addMessage()">Send</button>
                     </div>
                 </div>
             </div>
