Cleaned up code post presentation.

--- a/app/features/home/home.html
+++ b/app/features/home/home.html
@@ -1,18 +1,18 @@
-<div class="container-fluid">
-    <div class="alert alert-info"><i class="fa fa-info-circle"></i> This is just a simple demo of routing in AngularJS.
+<div class="jumbotron">
+    <div class="container">
+        <h3>
+            <a href="{{ getCurrentUrl() }}"><i class="fa fa-link"></i> {{ getCurrentUrl() }}</a>
+        </h3>
+        <p>Use the address above to participate.</p>
     </div>
+</div>
 
-    <hr class="hr-sm"/>
-
+<div class="container-fluid">
     <div class="row">
-        <!--<div class="col-xs-6">-->
-
-
-        <!--</div>-->
         <div class="col-xs-12">
             <div class="panel panel-success">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><i class="fa fa-comments"></i> Chat While You Wait</h3>
+                    <h3 class="panel-title"><i class="fa fa-comments"></i> Simple Firebase Chat...go ahead...play with it...</h3>
                 </div>
                 <div class="chat" scroll-glue>
                     <table class="table table-striped small">
