--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,7 @@
 <script src="features/home/homeCtrl.js"></script>
 <script src="scripts/routes.js"></script>
 <script src="scripts/constants.js"></script>
+<script src="scripts/config.js"></script>
 <!-- endinject -->
 <!-- endbuild -->
 
