--- a/app/features/products/productList.html
+++ b/app/features/products/productList.html
@@ -1,12 +1,8 @@
 <div class="container">
 
     <div class="panel panel-primary">
-        <div class="panel-heading"><i class="fa fa-twitch fa-lg"></i> Some Really Important Products
-            <!--<form class="pull-right" role="search">-->
-            <!--<input type="text" class="form-control input-sm" placeholder="Filter"-->
-            <!--ng-model="state.filterText">-->
-            <!--</form>-->
-
+        <div class="panel-heading">
+            <i class="fa fa-twitch fa-lg"></i> Some Really Important Products
         </div>
         <table class="table table-striped">
             <thead>
@@ -32,6 +28,5 @@
             </tbody>
         </table>
     </div>
-
 
 </div>
